# typomania-crates

./: .envrc.sample  Cargo.toml  README.md  pyproject.toml  typomania.toml
.sqlx/: query-794ecf54cfa996821f80cecb355cd82fb95af340d005eacf8fcfe0072618d9ce.json  query-d739af1b26848faa5d7cfd3a430fd73271664fcade1debe68816d69091d2c111.json
spacy/: Cargo.toml
spacy/src/: lib.rs
typomania-crates/: Cargo.toml
typomania-crates/queries/: get_most_popular_crates.sql  get_recent_crates.sql
typomania-crates/src/: config.rs  db.rs  main.rs
